<resources>
    <string name="app_name">MobiSpritle</string>
    <string name="title_home">Mobile Spirit Level</string>
    <string name="title_settings">Settings</string>
    <string name="label_home">Mobile Spirit Level</string>
    <string name="text_empty" />
    <string name="label_default_azimuth">0.94829</string>
    <string name="label_default_roll">.0483</string>
    <string name="label_use_gravity_sensor">Use Gravity Sensor</string>
    <string name="label_use_rotation_sensor">Use Rotation Sensor</string>
    <string name="label_save">Save</string>
    <string name="label_use_acceleration">Use Acceleration</string>
    <string name="label_digital_display">Digital Display</string>
    <string name="label_display_acceleration_vector">Display Acceleration Vector</string>
</resources>
