<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.33"
            android:orientation="horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/normalMargin"
            android:textColor="@color/colorBackgroundText"
            android:textAlignment="center"
            android:textSize="@dimen/largeText"
            android:text="@string/title_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchUseGravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline2"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
            app:layout_constraintTop_toTopOf="@id/switchUseGravity"
            android:textColor="@color/colorBackgroundText"
            android:text="@string/label_use_gravity_sensor"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchUseRotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline2"
            app:layout_constraintTop_toBottomOf="@id/switchUseGravity"
            android:layout_marginVertical="@dimen/largeMargin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
            app:layout_constraintTop_toTopOf="@id/switchUseRotation"
            android:textColor="@color/colorBackgroundText"
            android:text="@string/label_use_rotation_sensor"
            />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorSecondary"
            android:textColor="@color/colorSecondaryText"
            android:layout_margin="@dimen/normalMargin"
            android:text="@string/label_save"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>