<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:keepScreenOn="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"
            />

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_top"
            android:textAlignment="center"
            android:textColor="@color/colorBackgroundText"
            android:textSize="30sp"
            android:text="@string/label_home" />

        <ImageView
            android:id="@+id/level_glas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/level_glass"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_top"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_start"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_end"
            android:contentDescription="@string/text_empty" />

        <ImageView
            android:id="@+id/level_bubble"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/level_bubble"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_top"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_start"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_end"
            android:translationX="0dp"
            android:contentDescription="@string/text_empty" />

        <ImageView
            android:id="@+id/level_marks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/level_marks"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_top"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_start"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_end"
            android:contentDescription="@string/text_empty" />

        <TextView
            android:id="@+id/textViewAzimuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
            android:layout_margin="@dimen/normalMargin"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBackgroundAccentText"
            android:text="@string/label_default_azimuth" />

        <TextView
            android:id="@+id/textViewPitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
            android:layout_margin="@dimen/normalMargin"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBackgroundAccentText"
            android:text="@string/label_default_roll" />

        <TextView
            android:id="@+id/textViewRoll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline2"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
            android:layout_margin="@dimen/normalMargin"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBackgroundAccentText"
            android:text="@string/label_default_roll" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
